background color and swal js alert added

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
 .card-image{
    height: 400px;
-   /* background: linear-gradient(#000428, #004e92); */
    background-color: lightgray;
 
 }
 .cardBodyColor{
-   background-color: rgb(156, 154, 154);
+   background-color: lightgray;
+   /* background-color: rgb(156, 154, 154); */
    /* background-color: #A2A2A1FF; */
    /* background-color: #9CC3D5FF; */
    /* background-color: #4ca1af; */
 }
 body{
-   background-image: linear-gradient(to right,  rgb(91, 111, 128),  #195190FF);
+   background: linear-gradient(to right, #1a2f3f, #7094ce);
+   /* background-image: linear-gradient(to right,  rgb(91, 111, 128),  #195190FF); */
    /* background-image: linear-gradient(to right,  #00539CFF,  #EEA47FFF); */
    /* background-image: linear-gradient(to right,  #4ca1af,  #c4e0e5); */
    /* background-image: linear-gradient(to right,  #000428, #004e92); */
